<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/sort"
        android:title="Sort"
        android:icon="@drawable/up_down"
        app:showAsAction="always" />

</menu>