...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/adamina"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/share_button"
        app:layout_constraintStart_toStartOf="@+id/word"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:text="The only proper response to something that make absolutely no sense." />

    <TextView
        android:id="@+id/example"
...
